tests/snapshots/wallets/balances/exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - balances
    - wallet
---
success: true
exit_code: 0
----- stdout -----
{
  "balances": [
    {
      "address": "1F8hPMrEHKhKqpScWJjeJGiQSaBJE6VnqEBAHb5rVFfoP",
      "balance": "0",
      "balanceHint": "0 ALPH",
      "lockedBalance": "0",
      "lockedBalanceHint": "0 ALPH"
    }
  ],
  "totalBalance": "0",
  "totalBalanceHint": "0 ALPH"
}

----- stderr -----
