tests/snapshots/wallets/balances/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - balances
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>

Usage: kermit wallets balances <WALLET_NAME>

For more information, try '--help'.
